--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "godotTools.editorPath.godot3": "c:\\Users\\Professor\\Documents\\Godot_v3.6-stable_win64.exe\\Godot_v3.6-stable_win64.exe"
+  "godotTools.editorPath.godot3": "c:\\Users\\DIEGO PASCHOAL\\Documents\\Godot_v3.5.3-stable_win64.exe\\Godot_v3.5.3-stable_win64.exe"
 }
